2025.01.29. 18:05 update teacher version